src/test/resources/samples/valid/decorated-page.bdoc
<?xml version="1.0" encoding="UTF-8"?>
<document xmlns="urn:bdoc:v0.1" id="doc-2" title="Decorated Page" documentType="book">
    <pages>
        <page id="page-1" index="1" width="595.0" height="842.0">
            <layers>
                <layer id="layer-bg" name="Background" role="background" visible="true" zIndex="0"/>
                <layer id="layer-decor" name="Decoration" role="decoration" visible="true" zIndex="1"/>
                <layer id="layer-text" name="Text" role="text" visible="true" zIndex="2"/>
            </layers>
            <objects>
                <vectorShape id="shape-1" layerRef="layer-decor" type="rounded-rectangle">
                    <geometry x="40.0" y="40.0" width="515.0" height="762.0" arcWidth="24.0" arcHeight="24.0"/>
                </vectorShape>
                <vectorShape id="shape-2" layerRef="layer-decor" type="line">
                    <geometry x="70.0" y="120.0" width="455.0" height="0.0"/>
                </vectorShape>
                <textFrame id="text-1" layerRef="layer-text" storyRef="story-1">
                    <geometry x="70.0" y="150.0" width="455.0" height="180.0"/>
                </textFrame>
            </objects>
        </page>
    </pages>
    <stories>
        <story id="story-1">
            <paragraph role="title">Глава 1</paragraph>
            <paragraph role="body">Это корректный документ с декоративной рамкой и текстовым фреймом.</paragraph>
        </story>
    </stories>
</document>
