src/test/resources/samples/invalid/missing-story-ref.bdoc
<?xml version="1.0" encoding="UTF-8"?>
<document xmlns="urn:bdoc:v0.1" id="doc-bad-1" title="Missing Story Ref" documentType="book">
    <pages>
        <page id="page-1" index="1" width="595.0" height="842.0">
            <layers>
                <layer id="layer-text" name="Text" role="text" visible="true" zIndex="1"/>
            </layers>
            <objects>
                <textFrame id="text-1" layerRef="layer-text" storyRef="story-missing">
                    <geometry x="70.0" y="150.0" width="455.0" height="180.0"/>
                </textFrame>
            </objects>
        </page>
    </pages>
    <stories>
        <story id="story-1">
            <paragraph role="body">Ссылка storyRef указывает в пустоту.</paragraph>
        </story>
    </stories>
</document>